# CarDetection

./: .gitignore  CMakeLists.txt  main.cpp
config/: BlobTracking.xml  PixelBasedAdaptiveSegmenter.xml  VehicleCounting.xml
package_analysis/: Lane.cpp  Lane.h  VehicleCounting.cpp  VehicleCounting.h
package_bgs/PBAS/: PixelBasedAdaptiveSegmenter.cpp  PixelBasedAdaptiveSegmenter.h
package_tracking/: BlobTracking.cpp  BlobTracking.h
